--- a/biodata.html
+++ b/biodata.html
@@ -7,12 +7,83 @@
 <body>
 
 <h1>Biodata Page</h1>
+
+<!--menu using absolute/internal link-->
 <a href="index.html">Home</a>
 <a href="biodata.html">Biodata</a>
 <a href="education.html">Education</a>
+<a href="education.html">Family</a>
+<a href="education.html">Gallery</a>
 <a href="experience.html">Experience</a>
 <a href="portfolio.html">Portfolio</a>
-<a href="contact.html">Contact Me</a>
+
+<img src="", align="center">
+
+	<h1 style="font-family: 'Permanent Marker', cursive;" align="center">Biodata</h1>
+<div align="center">
+<table>
+	<tr>
+		<th>Name</th>
+		<td>Nur Fatin Syuhada binti Adnan</td>
+	</tr>
+	<tr>
+		<th>Matrix Number</th>
+		<td>2020519853</td>
+	</tr>
+	<tr>
+		<th>Class</th>
+		<td>D2BA2424C</td>
+	</tr>
+	<tr>
+		<th>Address</th>
+		<td>Pt 120 Kg Tasek Berangan, 17070 Pasir Mas, Kelantan</td>
+	</tr>
+	<tr>
+		<th>Birth Date</th>
+		<td>20 November 1999</td>
+	</tr>
+	<tr>
+		<th>Birth Place</th>
+		<td>Johor Bahru, Johor</td>
+	</tr>
+	<tr>
+		<th>Nickname</th>
+		<td>Fatin, Syuhada, FatinSyu, Syu, Atin</td>
+	</tr>
+	<tr>
+		<th>Number of Sibling</th>
+		<td>6 Siblings (3 Girls, 3 Boys)</td>
+	</tr>
+	<tr>
+		<th>Favorite Color</th>
+		<td>Purple</td>
+	</tr>
+	<tr>
+		<th>Favorite Food</th>
+		<td>Bihun Tomyam</td>
+	</tr>
+	<tr>
+		<th>Favorite Drink</th>
+		<td>Chocolate</td>
+	</tr>
+	<tr>
+		<th>Hobby</th>
+		<td>Reading Novel, Watching Drama & Movies, Listening Music</td>
+	</tr>
+<table>
+	</div>
+
+	<h1 style="font-family: 'Mr Dafoe', cursive;" align="center">Contact</h1>
+<p>
+<!--menu using absolute/external link-->
+<a href="https://www.facebook.com/syuhada.fatin/" target="_blank"><img scr="images/Facebook-logo.png" width="50px"></a>
+
+<a href="https://www.instagram.com/nrftnsyhd" target="_blank"><img src="images/instagram.png" width="50px"></a>
+
+<a href="mailto:jannatulsyuhada@gmail.com"><img src="images/gmail icon.png" width="50px"></a>
+
+<a href="tel:+60179550459"><img src="images/phone icon.png" width="50px"></a>
+<p>
 
 </body>
 </html>
