--- a/biodata.html
+++ b/biodata.html
@@ -21,7 +21,7 @@
 
 	<h1 style="font-family: 'Permanent Marker', cursive;" align="center">Biodata</h1>
 <div align="center">
-<table>
+<table= "color: 'black'">
 	<tr>
 		<th>Name</th>
 		<td>Nur Fatin Syuhada binti Adnan</td>
