--- a/biodata.html
+++ b/biodata.html
@@ -17,9 +17,8 @@
 <a href="experience.html">Experience</a>
 <a href="portfolio.html">Portfolio</a>
 
-<img src="", align="center">
-
 	<h1 style="font-family: 'Permanent Marker', cursive;" align="center">Biodata</h1>
+	<img src="images/45.jpg" width="70px" , align="center">
 <div align="center">
 <table= "color: 'black'">
 	<tr>
