--- a/biodata.html
+++ b/biodata.html
@@ -18,10 +18,11 @@
 <a href="portfolio.html">Portfolio</a>
 
 	<h1 style="font-family: 'Permanent Marker', cursive;" align="center">Biodata</h1>
+
+	<img src="images/45.jpg" width="70px" , align="center">
 	
 <div align="center">
-	<img src="images/45.jpg" width="70px" , align="center">
-<table= "color: 'black'">
+<table>
 	<tr>
 		<th>Name</th>
 		<td>Nur Fatin Syuhada binti Adnan</td>
