--- a/biodata.html
+++ b/biodata.html
@@ -19,6 +19,10 @@
 
 	<h1 style="font-family: 'Permanent Marker', cursive;" align="center">Biodata</h1>
 <div align="center">
+<p>
+	<img src="images/45.jpg" width="70px" , align="center">
+</p>
+
 <table>
 	<tr>
 		<th>Name</th>
